# Layout21

./: .gitignore  readme.md
gds21/: Cargo.toml
gds21/src/: lib.rs
layout21protos/: Cargo.toml
layout21raw/: Cargo.toml
layout21raw/src/: align.rs  bbox.rs  data.rs  error.rs  gds.rs  geom.rs  lef.rs  lib.rs  proto.rs
layout21tetris/src/: placer.rs
layout21tetris/src/conv/: raw.rs
lef21/src/: write.rs
